@@ -1,6 +1,5 @@
 package org.digijava.module.calendar.action;
 
-import java.text.ParseException;
 import java.text.SimpleDateFormat;
 import java.util.ArrayList;
 import java.util.Collection;
@@ -27,7 +26,6 @@ import org.apache.struts.action.ActionMapping;
 import org.apache.struts.util.LabelValueBean;
 import org.digijava.kernel.entity.Locale;
 import org.digijava.kernel.entity.ModuleInstance;
-import org.digijava.kernel.persistence.WorkerException;
 import org.digijava.kernel.request.Site;
 import org.digijava.kernel.util.RequestUtils;
 import org.digijava.module.aim.dbentity.AmpGlobalSettings;
@@ -43,27 +41,23 @@ import org.digijava.module.aim.util.TeamUtil;
 import org.digijava.module.calendar.dbentity.AmpCalendar;
 import org.digijava.module.calendar.dbentity.AmpCalendarAttendee;
 import org.digijava.module.calendar.dbentity.AmpCalendarPK;
+import org.digijava.module.calendar.dbentity.AmpEventType;
 import org.digijava.module.calendar.dbentity.Calendar;
 import org.digijava.module.calendar.dbentity.CalendarItem;
 import org.digijava.module.calendar.dbentity.RecurrCalEvent;
-import org.digijava.module.calendar.entity.AmpEventType;
 import org.digijava.module.calendar.entity.CalendarOptions;
 import org.digijava.module.calendar.entity.DateBreakDown;
 import org.digijava.module.calendar.entity.DateNavigator;
-import org.digijava.module.calendar.exception.CalendarException;
 import org.digijava.module.calendar.form.CalendarEventForm;
 import org.digijava.module.calendar.util.AmpDbUtil;
 import org.digijava.module.calendar.util.AmpUtil;
 import org.digijava.module.calendar.util.CalendarConversor;
 import org.digijava.module.calendar.util.CalendarThread;
-import org.digijava.module.categorymanager.dbentity.AmpCategoryValue;
-import org.digijava.module.categorymanager.util.CategoryManagerUtil;
 import org.digijava.module.common.dbentity.ItemStatus;
 import org.digijava.module.message.dbentity.AmpMessageSettings;
 import org.digijava.module.message.triggers.CalendarEventSaveTrigger;
 import org.digijava.module.message.triggers.RemoveCalendarEventTrigger;
 import org.digijava.module.message.util.AmpMessageUtil;
-
 
 public class ShowCalendarEvent extends Action {
 	
@@ -77,12 +71,6 @@ public class ShowCalendarEvent extends Action {
  		CalendarThread.setLocale(navigationLanguage);
  		
         CalendarEventForm ceform = (CalendarEventForm) form;
-        String print = request.getParameter("method");
-        String ampCalendarId = request.getParameter("calendarId");
-        if(!print.isEmpty() && print.equals("print")){
-        	ceform.setAmpCalendarId(new Long(ampCalendarId));
-        	ceform.setMethod(print);
-        }
         if (ceform.getMethod().equalsIgnoreCase("new")) {
             ceform.reset(mapping, request);
             ceform.setOrganizations(null);
@@ -92,23 +80,22 @@ public class ShowCalendarEvent extends Action {
         else if(ceform.getMethod().equalsIgnoreCase("removeOrg")) 
         {
         	Long[] listSelectedOrganizations = ceform.getSelOrganizations();
-            if (listSelectedOrganizations != null && listSelectedOrganizations.length > 0) {
-                Collection<AmpOrganisation> colOrganizations = ceform.getOrganizations();
-                Collection<AmpOrganisation> newColOrganizations = new ArrayList<AmpOrganisation>();
-                newColOrganizations.addAll(colOrganizations);
-
-                Iterator<AmpOrganisation> itOrgs = colOrganizations.iterator();
-                while (itOrgs.hasNext()) {
-                    AmpOrganisation currentOrg = itOrgs.next();
-                    for (int index = 0; index < listSelectedOrganizations.length; index++) {
-                        if (currentOrg.getAmpOrgId().equals(listSelectedOrganizations[index])) {
-                            newColOrganizations.remove(currentOrg);
-                            break;
-                        }
-                    }
-                }
-                ceform.setOrganizations(newColOrganizations);
-            }
+        	Collection<AmpOrganisation> colOrganizations = ceform.getOrganizations();
+        	Collection<AmpOrganisation> newColOrganizations = new ArrayList<AmpOrganisation>();
+        	newColOrganizations.addAll(colOrganizations);
+        	
+        	Iterator<AmpOrganisation> itOrgs = colOrganizations.iterator();
+        	while(itOrgs.hasNext()){
+        		AmpOrganisation currentOrg = itOrgs.next();
+        		for(int index=0; index < listSelectedOrganizations.length ; index++)
+        		{
+              		if(currentOrg.getAmpOrgId().equals(listSelectedOrganizations[index])){
+              			newColOrganizations.remove(currentOrg);
+              			break;
+              		}
+        		}
+        	}
+        	ceform.setOrganizations(newColOrganizations);
         }
         	
         // calendar type
@@ -128,24 +115,25 @@ public class ShowCalendarEvent extends Action {
         }
 
         ceform.setCalendarTypes(calendarTypesList);
-        if(ceform.getSelectedEventTypeId() != null && ceform.getSelectedEventTypeId() > 0){
-        	String eventTypeName=CategoryManagerUtil.getAmpCategoryValueFromDb(ceform.getSelectedEventTypeId()).getValue();
-        	ceform.setSelectedEventTypeName(eventTypeName);
+        ceform.setEventTypesList(AmpDbUtil.getEventTypes());
+        if (ceform.getSelectedEventTypeId() != null && ceform.getSelectedEventTypeId() > 0) {
+            AmpEventType eventType = AmpDbUtil.getEventType(ceform.getSelectedEventTypeId());
+            if (eventType != null) {
+                ceform.setSelectedEventTypeName(eventType.getName());
+            }
         }
-        
         // selected calendar type
-        Long selectedCalendarTypeId = ceform.getCalendarTypeId();
+        Long selectedCalendarTypeId = ceform.getSelectedCalendarTypeId();
         if (selectedCalendarTypeId == null ||
-                (!selectedCalendarTypeId.equals(new Long(CalendarOptions.CALENDAR_TYPE_GREGORIAN)) &&
-                 !selectedCalendarTypeId.equals(new Long(CalendarOptions.CALENDAR_TYPE_ETHIOPIAN)) &&
-                 !selectedCalendarTypeId.equals(new Long(CalendarOptions.CALENDAR_TYPE_ETHIOPIAN_FY)))) {
-                selectedCalendarTypeId = Long.valueOf(CalendarOptions.defaultCalendarType);
-                ceform.setSelectedCalendarTypeId(selectedCalendarTypeId);
-      }else{
-        ceform.setSelectedCalendarTypeId(selectedCalendarTypeId);
-       }
+            (!selectedCalendarTypeId.equals(new Long(CalendarOptions.CALENDAR_TYPE_GREGORIAN)) &&
+             !selectedCalendarTypeId.equals(new Long(CalendarOptions.CALENDAR_TYPE_ETHIOPIAN)) &&
+             !selectedCalendarTypeId.equals(new Long(CalendarOptions.CALENDAR_TYPE_ETHIOPIAN_FY)))) {
+            selectedCalendarTypeId = Long.valueOf(CalendarOptions.defaultCalendarType);
+            ceform.setSelectedCalendarTypeId(selectedCalendarTypeId);
+        }
+
         ceform.setTeamsMap(loadRecepients());
-       
+
         String[] slAtts = ceform.getSelectedAtts();
         if (slAtts != null) {
             Collection<LabelValueBean> selectedAttsCol = new ArrayList<LabelValueBean> ();
@@ -188,21 +176,19 @@ public class ShowCalendarEvent extends Action {
         
         if (ceform.getMethod().equalsIgnoreCase("new")) {
             ceform.setAmpCalendarId(null);
-            ceform.setActionButtonsVisible(true);
         } else if (ceform.getMethod().equalsIgnoreCase("edit")) {
             loadAmpCalendar(ceform, request);
         } else if(ceform.getMethod().equalsIgnoreCase("ok")){
         	ceform.setMethod("");
         	return mapping.findForward("forward");
-        } else if (ceform.getMethod().equalsIgnoreCase("save")) {
+        }else if (ceform.getMethod().equalsIgnoreCase("save")) {
         	String stDate=ceform.getSelectedStartDate() + " " + ceform.getSelectedStartTime();
         	String endDate=ceform.getSelectedEndDate()+ " " + ceform.getSelectedEndTime();
-        	ActionErrors errors=validateDate(stDate,endDate,ceform);
+        	ActionErrors errors=validateDate(stDate,endDate);
         	errors.add(validateEventInformation(ceform.getEventTitle(),ceform.getSelectedAtts()));
         	if(!errors.isEmpty()){
         		saveErrors(request, errors);
-        		ceform.setEventTypesList(CategoryManagerUtil.getAmpEventColors());
-                return mapping.findForward("success");        		
+        		return mapping.findForward("success");        		
         	}else{
         		saveAmpCalendar(ceform, request);
                 ceform.setMethod("");
@@ -213,58 +199,55 @@ public class ShowCalendarEvent extends Action {
         } else if (ceform.getMethod().equalsIgnoreCase("delete")) {
         	AmpCalendar ampCalendar=AmpDbUtil.getAmpCalendar(ceform.getAmpCalendarId());
         	if(ampCalendar!=null){
-        	//get current member
-        	HttpSession ses = request.getSession();
-            TeamMember mem = (TeamMember) ses.getAttribute("currentMember");
-            /**
-        	 * if event belongs to several users,then deleting event should delete only link between the user that clicked delete button and event,
-        	 * but for other users that event should remain,unless creator decides to remove it.   
-        	 */
-            if(ampCalendar.getMember()!=null && mem.getMemberId().equals(ampCalendar.getMember().getAmpTeamMemId())){
-            	AmpDbUtil.deleteAmpCalendar(ceform.getAmpCalendarId());
-            	new RemoveCalendarEventTrigger(ampCalendar);
-            }else{
-            	if(ampCalendar.getAttendees()!=null && ampCalendar.getAttendees().size()>0){        		
-            		for (Object obj : ampCalendar.getAttendees()) {
-            			AmpCalendarAttendee attendee=(AmpCalendarAttendee)obj;
-            			if(attendee.getMember()!=null && attendee.getMember().getAmpTeamMemId().equals(mem.getMemberId())){
-            				ampCalendar.getAttendees().remove(attendee);
-            				AmpDbUtil.updateAmpCalendar(ampCalendar);
-                			//delete that Attendee
-                			AmpDbUtil.deleteAmpCalendarAttendee(attendee);
-            				break;
-            			}
-    				}
-            	}else{
-            		AmpDbUtil.deleteAmpCalendar(ceform.getAmpCalendarId());
-            	}
-            }       
+        		//get current member
+            	HttpSession ses = request.getSession();
+                TeamMember mem = (TeamMember) ses.getAttribute("currentMember");
+                /**
+            	 * if event belongs to several users,then deleting event should delete only link between the user that clicked delete button and event,
+            	 * but for other users that event should remain,unless creator decides to remove it.   
+            	 */
+                if(ampCalendar.getMember()!=null && mem.getMemberId().equals(ampCalendar.getMember().getAmpTeamMemId())){
+                	AmpDbUtil.deleteAmpCalendar(ceform.getAmpCalendarId());
+                	new RemoveCalendarEventTrigger(ampCalendar);
+                }else{
+                	if(ampCalendar.getAttendees()!=null && ampCalendar.getAttendees().size()>0){        		
+                		for (Object obj : ampCalendar.getAttendees()) {
+                			AmpCalendarAttendee attendee=(AmpCalendarAttendee)obj;
+                			if(attendee.getMember()!=null && attendee.getMember().getAmpTeamMemId().equals(mem.getMemberId())){
+                				ampCalendar.getAttendees().remove(attendee);
+                				AmpDbUtil.updateAmpCalendar(ampCalendar);
+                    			//delete that Attendee
+                    			AmpDbUtil.deleteAmpCalendarAttendee(attendee);
+                				break;
+                			}
+        				}
+                	}else{
+                		AmpDbUtil.deleteAmpCalendar(ceform.getAmpCalendarId());
+                	}
+                }
         	}
         	
             ceform.setMethod("");
             return mapping.findForward("forward");
-            
-        } else if (ceform.getMethod().equalsIgnoreCase("preview") || ceform.getMethod().equalsIgnoreCase("print")) {
+
+        } else if (ceform.getMethod().equalsIgnoreCase("preview")) {
         	String stDate=ceform.getSelectedStartDate() + " " + ceform.getSelectedStartTime();
         	String endDate=ceform.getSelectedEndDate()+ " " + ceform.getSelectedEndTime();
         	ActionErrors errors=new ActionErrors();
         	if(ceform.getAmpCalendarId()==null || !ceform.isResetForm()){
-        		errors=validateDate(stDate,endDate,ceform);
+        		errors=validateDate(stDate,endDate);
         		errors.add(validateEventInformation(ceform.getEventTitle(),ceform.getSelectedAtts()));
         	}        	
         	if(!errors.isEmpty()){
         		saveErrors(request, errors);
         		return mapping.findForward("success");        		
         	}else{
-        		  
-                  
         		loadAmpCalendar(ceform, request);
         		if(ceform.getAmpCalendarId()!=null && ceform.getAmpCalendarId() > 0){ //<--this means that user is not creating new event, but previewing old one
         			ceform.setActionButtonsVisible(false);
             		//get current member
             		HttpSession ses = request.getSession();
                     TeamMember mem = (TeamMember) ses.getAttribute("currentMember");
-                    ceform.setEventCreator(mem.getMemberName());
             		String[] selattendeess=ceform.getSelectedAtts();
             		if(ceform.getEventCreatorId()!=null && ceform.getEventCreatorId().equals(mem.getMemberId())){
             			ceform.setActionButtonsVisible(true);
@@ -276,42 +259,16 @@ public class ShowCalendarEvent extends Action {
     						}
     					}
             		}
-        		}        		
-        		if(!ceform.getMethod().equalsIgnoreCase("print")){
-        			ceform.setMethod("");
-                	return mapping.findForward("preview");
-        		}else{
-        			
-        			 return mapping.findForward("print");
-             		
         		}
+                ceform.setMethod("");
+                return mapping.findForward("preview");
         	}
         }
-        
-        
-//        List<AmpEventType> eventTypeList = new ArrayList<AmpEventType>(); 
-//        
-//        AmpCategoryClass categoryClass = CategoryManagerUtil.loadAmpCategoryClassByKey(CategoryConstants.EVENT_TYPE_KEY);   
-//        Iterator<AmpCategoryValue> categoryClassIter = categoryClass.getPossibleValues().iterator();
-//         while(categoryClassIter.hasNext()){
-//        	AmpEventType eventType = new AmpEventType();
-//        	AmpCategoryValue item = (AmpCategoryValue) categoryClassIter.next();
-//        	 eventType.setName(item.getValue());
-//        	 eventType.setId(item.getId());
-//        	   Iterator<AmpCategoryValue> usedValues = item.getUsedValues().iterator();
-//        	    while (usedValues.hasNext()){
-//        		 AmpCategoryValue categoryValueItem = (AmpCategoryValue) usedValues.next();
-//        		 eventType.setColor(categoryValueItem.getValue());
-//        	 }
-//        	  eventTypeList.add(eventType);
-//        }
-//        
-        ceform.setEventTypesList(CategoryManagerUtil.getAmpEventColors());
+
         return mapping.findForward("success");
     }
 
-   
-	private void saveAmpCalendar(CalendarEventForm ceform, HttpServletRequest request) throws Exception{
+    private void saveAmpCalendar(CalendarEventForm ceform, HttpServletRequest request) throws Exception{
         try {
         	
         	if (ceform.getAmpCalendarId() != null && ceform.getAmpCalendarId() > 0) {
@@ -320,9 +277,9 @@ public class ShowCalendarEvent extends Action {
 
             AmpCalendar ampCalendar = new AmpCalendar();
 
-            AmpCategoryValue value =    CategoryManagerUtil.getAmpCategoryValueFromDb(ceform.getSelectedEventTypeId());
-            ampCalendar.setEventsType(value);
-         
+            AmpEventType eventType = AmpDbUtil.getEventType(ceform.getSelectedEventTypeId());
+            ampCalendar.setEventType(eventType);
+
             if(ampCalendar.getMember()==null){
                 HttpSession ses = request.getSession();
                 TeamMember mem = (TeamMember) ses.getAttribute("currentMember");
@@ -376,35 +333,27 @@ public class ShowCalendarEvent extends Action {
             calendarItems.add(calendarItem);
             calendar.setCalendarItem(calendarItems);
 
-            if(ceform.getRecurrPeriod()!=null && ceform.getRecurrPeriod().longValue() != 0){           
+            if(ceform.getSelectedStartMonth() != null){           
 	            Set recEvent =new HashSet();
 	            RecurrCalEvent recurrEvent = new RecurrCalEvent();
 	            recurrEvent.setCalendar(calendar);
 	            recurrEvent.setRecurrPeriod(ceform.getRecurrPeriod());
 	            recurrEvent.setSelectedStartMonth(ceform.getSelectedStartMonth());
 	            recurrEvent.setTypeofOccurrence(ceform.getTypeofOccurrence());
-	            recurrEvent.setOccurrWeekDays(ceform.getWeekDays());
 
                 // selected start date and selected end date
                 String dtformat = FeaturesUtil.getGlobalSettingValue(Constants.GLOBALSETTINGS_DATEFORMAT);
 	            if (dtformat == null) {
 	                dtformat = "dd/MM/yyyy";
 	            }
-	            dtformat+=" HH:mm";
                  SimpleDateFormat sdf = new SimpleDateFormat(dtformat);
                  Date recurrStartDate=null;
                  Date recurrEndDate= null;
-                 String endDate = null;
-                 String startDate = null;
                  if(ceform.getRecurrStartDate()!=null && !ceform.getRecurrStartDate().equals("")){
-                	 
-                	 startDate = ceform.getRecurrStartDate() + " " + ceform.getRecurrSelectedStartTime();
-                	 recurrStartDate=sdf.parse(startDate);
+                	 recurrStartDate=sdf.parse(ceform.getRecurrStartDate());
                  }
                  if(ceform.getRecurrEndDate()!=null && !ceform.getRecurrEndDate().equals("")){
-                	 
-                	endDate = ceform.getRecurrEndDate() + " " + ceform.getRecurrSelectedEndTime();
-                	recurrEndDate= sdf.parse(endDate);
+                	recurrEndDate= sdf.parse(ceform.getRecurrEndDate());
                  }
                 recurrEvent.setRecurrStartDate(recurrStartDate);
                 recurrEvent.setRecurrEndDate(recurrEndDate);              
@@ -431,10 +380,10 @@ public class ShowCalendarEvent extends Action {
             dtformat+=" HH:mm";
 
             SimpleDateFormat sdf = new SimpleDateFormat(dtformat);
-
+            
             String startDateTime = ceform.getSelectedStartDate() + " " + ceform.getSelectedStartTime();
             String endDateTime = ceform.getSelectedEndDate() + " " + ceform.getSelectedEndTime();
-
+    		
             if (ceform.getSelectedCalendarTypeId().equals(new Long(CalendarOptions.CALENDAR_TYPE_ETHIOPIAN)) ||
             		ceform.getSelectedCalendarTypeId().equals(new Long(CalendarOptions.CALENDAR_TYPE_ETHIOPIAN_FY))){
             	CalendarConversor convert  = new CalendarConversor(ceform.getStartDate().YEAR);
@@ -443,8 +392,8 @@ public class ShowCalendarEvent extends Action {
             	calendar.setStartDate(sdf.parse(AmpUtil.SimpleEthipianToGregorian(startDateTime, convert)));
             	calendar.setEndDate(sdf.parse(AmpUtil.SimpleEthipianToGregorian(endDateTime, convert)));
             }else{
-            calendar.setStartDate(sdf.parse(startDateTime));
-            calendar.setEndDate(sdf.parse(endDateTime));
+            	calendar.setStartDate(sdf.parse(startDateTime));
+                calendar.setEndDate(sdf.parse(endDateTime));
             }
 
             calPK.setCalendar(calendar);
@@ -455,14 +404,14 @@ public class ShowCalendarEvent extends Action {
             AmpDbUtil.updateAmpCalendar(ampCalendar);
             //Create new calendar event alert           
             CalendarEventSaveTrigger cet=new CalendarEventSaveTrigger(ampCalendar);
-            ceform.setResetForm(true);
+           
         } catch (Exception ex) {
             ex.printStackTrace();
         }
 
     }
 
-    private void loadAmpCalendar(CalendarEventForm ceform, HttpServletRequest request) throws CalendarException, WorkerException, ParseException {
+    private void loadAmpCalendar(CalendarEventForm ceform, HttpServletRequest request) {
         if (ceform.getAmpCalendarId() != null &&
             ceform.getAmpCalendarId() > 0 &&
             ceform.isResetForm()) {
@@ -501,7 +450,8 @@ public class ShowCalendarEvent extends Action {
                         	}
                         	if(!teams.contains(member.getAmpTeam())){
                         		teams.add(member.getAmpTeam());
-                        	}                        	
+                        	}
+                        	
                         } else if(guest!=null){
                         	guests.add(guest);
                         }
@@ -547,15 +497,13 @@ public class ShowCalendarEvent extends Action {
                 // private event
                 ceform.setPrivateEvent(ampCalendar.isPrivateEvent());
                 
-                if(ampCalendar.getEventsType()!=null){
-                	AmpCategoryValue ampCategoryValue = CategoryManagerUtil.getAmpCategoryValueFromDb(ampCalendar.getEventsType().getId());
-                	if (ampCategoryValue != null){
-                		//event type
-                    	ceform.setSelectedEventTypeName(ampCategoryValue.getValue());
-                    	// selected event type
-                        ceform.setSelectedEventTypeId(ampCategoryValue.getId());
-                	}
+                if(ampCalendar.getEventType()!=null){
+                	//event type
+                	ceform.setSelectedEventTypeName(ampCalendar.getEventType().getName());
+                	// selected event type
+                    ceform.setSelectedEventTypeId(ampCalendar.getEventType().getId());
                 }
+                
 
                 Collection<AmpOrganisation> orgs = new ArrayList<AmpOrganisation> ();
                 if (ampCalendar.getOrganisations() != null) {
@@ -576,47 +524,16 @@ public class ShowCalendarEvent extends Action {
 
                 DateBreakDown startDateBreakDown = null;
                 DateBreakDown endDateBreakDown = null;
-                DateBreakDown endRecurrDateBreakDown = null;
-                
-             
-                	
-                	Iterator iterRecevent = calendar.getRecurrCalEvent().iterator();
-                	while(iterRecevent.hasNext()){
-                		RecurrCalEvent rec = (RecurrCalEvent) iterRecevent.next();
-                		if(rec.getRecurrEndDate() != null){
-                			GregorianCalendar endRecurrDate = new GregorianCalendar();
-                			endRecurrDate.setTime(rec.getRecurrEndDate());
-                			endRecurrDateBreakDown = new DateBreakDown(endRecurrDate, ceform.getSelectedCalendarTypeId().intValue(),request);
-                			ceform.setRecurrEndDate(endRecurrDateBreakDown.formatDateString());
-                		}
-                		ceform.setRecurrPeriod(rec.getRecurrPeriod());
-                		ceform.setTypeofOccurrence(rec.getTypeofOccurrence());
-                		ceform.setOccurrWeekDays(rec.getOccurrWeekDays());
-                		
-                		if(rec.getTypeofOccurrence().equals( "year")){
-                		ceform.setSelectedStartMonth("");
-                		ceform.setSelectedStartYear(rec.getSelectedStartMonth());
-                		}else if(rec.getTypeofOccurrence().equals( "month")){
-                			ceform.setSelectedStartYear("");
-                			ceform.setSelectedStartMonth(rec.getSelectedStartMonth());
-                		}else{
-                			ceform.setSelectedStartYear("");
-                			ceform.setSelectedStartMonth("");
-                		}
-                		rec.getId();
-                	 
-                	} 
 
                 try {
-                    startDateBreakDown = new DateBreakDown(startDate, ceform.getSelectedCalendarTypeId().intValue(),request);
-                    endDateBreakDown = new DateBreakDown(endDate, ceform.getSelectedCalendarTypeId().intValue(),request);
-                    
+                    startDateBreakDown = new DateBreakDown(startDate, ceform.getSelectedCalendarTypeId().intValue());
+                    endDateBreakDown = new DateBreakDown(endDate, ceform.getSelectedCalendarTypeId().intValue());
+
                     ceform.setSelectedStartDate(startDateBreakDown.formatDateString());
                     ceform.setSelectedStartTime(startDateBreakDown.formatTimeString());
 
                     ceform.setSelectedEndDate(endDateBreakDown.formatDateString());
                     ceform.setSelectedEndTime(endDateBreakDown.formatTimeString());
-                    
                 } catch (Exception ex) {
                 	ex.printStackTrace();
                 }
@@ -645,7 +562,7 @@ public class ShowCalendarEvent extends Action {
         return teamMap;
     }
     
-    private ActionErrors validateDate(String eventStartDate,String eventEndDate, CalendarEventForm form) throws Exception{   
+    private ActionErrors validateDate(String eventStartDate,String eventEndDate) throws Exception{   
     	ActionErrors errors=new ActionErrors();
         String dtformat = FeaturesUtil.getGlobalSettingValue(Constants.GLOBALSETTINGS_DATEFORMAT);            
         if (dtformat == null) {
@@ -656,7 +573,6 @@ public class ShowCalendarEvent extends Action {
         SimpleDateFormat sdf = new SimpleDateFormat(dtformat);
         Date stDate = null;
         Date endDate=null;
-        Date endRecurrDate=null;
         
         try {
         	stDate=sdf.parse(eventStartDate);
@@ -666,47 +582,14 @@ public class ShowCalendarEvent extends Action {
 		
         try {
         	endDate=sdf.parse(eventEndDate);
+		
         } catch (Exception e) {
 			errors.add("incorrectDate", new ActionError("error.calendar.emptyEventEndDate"));
-		}
-        
-        try {
-        	endRecurrDate=sdf.parse(form.getRecurrEndDate() + " " + form.getRecurrSelectedEndTime());
-        } catch (Exception e) {
-			//errors.add("incorrectDate", new ActionError("error.calendar.emptyEventEndDate"));
 		}
         
         if(stDate !=null && !stDate.equals(endDate) && !stDate.before(endDate)){
         	errors.add("incorrectDate", new ActionError("error.calendar.endDateLessThanStartDate"));
         }
-        
-        if(endRecurrDate !=null && endRecurrDate.before(endDate)){
-        	errors.add("incorrectDate", new ActionError("error.calendar.endRecurrDateLessThanEndDate"));
-        }
-        
-        
-        Long diffDate = endDate.getTime() - stDate.getTime();
-        Long diffDays = (diffDate / (24 * 60 * 60 * 1000));
-        Long recurrDays = 0L;
-        
-        if (form.getTypeofOccurrence()!=null && form.getTypeofOccurrence()!="" && form.getRecurrPeriod()!=null && form.getRecurrPeriod()>0){
-        	if (form.getTypeofOccurrence().equalsIgnoreCase("day")) {
-        		recurrDays = form.getRecurrPeriod();
-			}
-        	if (form.getTypeofOccurrence().equalsIgnoreCase("week")) {
-        		recurrDays = form.getRecurrPeriod() * 7;
-			}
-        	if (form.getTypeofOccurrence().equalsIgnoreCase("month")) {
-        		recurrDays = form.getRecurrPeriod() * 30;
-			}
-        	if (form.getTypeofOccurrence().equalsIgnoreCase("year")) {
-        		recurrDays = form.getRecurrPeriod() * 365;
-			}
-        }
-        if ((recurrDays > 0) && (diffDays >= recurrDays)) {
-        	errors.add("incorrectDate", new ActionError("error.calendar.recurrPeriodLessThanEventDuration"));
-		}
-        
     	return errors;
     }
     
